[tool.poetry]
name = "pigeonvision"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pigeonvision"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
python-dotenv = "^1.1.0"
idna = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
